--- a/templates/interstitial.html
+++ b/templates/interstitial.html
@@ -7,6 +7,7 @@
 
 {% block head %}
 <style>
+{% include "focus-area-styles.css" %}
 h1 { margin-top: 0; }
 </style>
 {% endblock %}
@@ -21,15 +22,14 @@ h1 { margin-top: 0; }
 {% block body %}
 <div class="row">
   <div class="col-md-push-2 col-md-8">
-    <div class="panel panel-primary">
-      <div class="panel-body">
+    <div id="focus-area-wrapper">
         {{body|safe}}
 
         <div style="text-align: center; margin: 1.5em 0 .5em 0;">
           <a id="continue-btn" class="btn btn-primary" style="margin-right: 3em" 
             href="{{next}}">{{next_text}} &raquo;</a>
         </div>
-      </div>
+    </div>
   </div>
 </div>
 {% endblock %}
