--- a/discussion/templates/discussion/discussion.html
+++ b/discussion/templates/discussion/discussion.html
@@ -25,7 +25,7 @@
   }
 
 #discussion .comment-thread {
-  margin: 1em 0 1.5em 0;
+  margin-bottom: 1.5em;
 }
 
 #discussion .comment.author-is-self.panel {
