--- a/templates/index.html
+++ b/templates/index.html
@@ -18,9 +18,9 @@ Home
     {% if not has_projects %}
     <p><a class="btn btn-primary btn-lg" role="button" href="/new-project">Start a New Project/System &raquo;</a></p>
     {% else %}
-    <p><a class="btn btn-primary btn-lg" role="button" href="/projects">Choose a Project/System &raquo;</a></p>
+    <p><a class="btn btn-primary btn-lg" role="button" href="/projects">View Your Projects/Systems &raquo;</a></p>
     {% endif %}
-    
+
     <hr>
 
     <h2>GovReady&rsquo;s Learning Philosophy</h2>
