--- a/templates/task-header.html
+++ b/templates/task-header.html
@@ -9,6 +9,10 @@
     list-style-type: none;
     padding: 0;
     color: #888;
+    line-height: 128%;
+  }
+  #question-history-context ul li {
+    margin-bottom: .25em;
   }
   #question-history-context ul li a {
     color: inherit;
@@ -21,6 +25,12 @@
 .glyphicon.glyphicon-check {
   color: rgb(30,143,55);
 }
+
+#page-transition-paragraph p {
+  margin-bottom: 1em;
+  font-style: italic;
+}
+
 .help-block {
   font-size: .85em;
 }
