--- a/templates/question.html
+++ b/templates/question.html
@@ -12,13 +12,12 @@ Next Question: {{q.spec.title}} | {{task.title}}
 {% block body %}
 <style>
 h1 {
-  margin-top: 1em;
+  margin: 4px 0 18px 0;
   font-size: 22px;
   font-weight: bold;
 }
 
 #question {
-  margin: 1em 0 2em 0;
 }
   #question form.disabled label {
     color: #777;
@@ -32,7 +31,7 @@ h1 {
 
 {% if q.spec.type == "interstitial" %}
 #question-prompt {
-  margin: 20px 0;
+  margin-bottom: 20px;
 }
   #question img {
     display: block; /* so that horizontal auto margin centers */
