--- a/templates/task-progress-question-list.html
+++ b/templates/task-progress-question-list.html
@@ -3,6 +3,7 @@
     {% if not q.is_this_question and q.can_link %}<a href="?q={{q.key}}&previous={{previous|urlencode}}">{% endif %}
 
     {% if q.is_this_question  %}<span class="glyphicon glyphicon-play-circle"> </span>
+    {% elif q.skipped %}<span class="glyphicon glyphicon-edit"> </span>
     {% elif q.answered %}<span class="glyphicon glyphicon-check"> </span>
     {% else %}<span class="glyphicon glyphicon-unchecked"> </span>{% endif %}
 
