--- a/templates/base.html
+++ b/templates/base.html
@@ -224,7 +224,7 @@
     </div><!-- div wrapper -->
     {% endblock %}
 
-    {% if request.user.user_settings_task and not request.user.user_settings_task.is_finished %}
+    {% if request.user.user_settings_task and not request.user.user_settings_task.is_finished and not request.is_user_settings_page %}
     <div class="container" style="margin-top: 1em;">
         <div class="alert alert-warning">
           Please complete <a href="{{request.user.user_settings_task.get_absolute_url}}">your account settings</a>.
