--- a/templates/interstitial.html
+++ b/templates/interstitial.html
@@ -26,8 +26,13 @@ h1 { margin-top: 0; }
         {{body|safe}}
 
         <div style="text-align: center; margin: 1.5em 0 .5em 0;">
+          {% if alt_url %}
+            <a id="alt-btn" class="btn btn-primary" style="margin-right: 3em" 
+              href="{{alt_url}}">{{alt_text}} &raquo;</a>
+          {% endif %}
+
           <a id="continue-btn" class="btn btn-primary" style="margin-right: 3em" 
-            href="{{next}}">{{next_text}} &raquo;</a>
+            href="{{continue_url}}">{{continue_text}} &raquo;</a>
         </div>
     </div>
   </div>
