add video to index.html

--- a/templates/index.html
+++ b/templates/index.html
@@ -34,9 +34,9 @@ Home
 			<p>It’s a challenge to make a highly technical subject like compliance easy, and that’s what we’re going for. We’re working to operationalize the information you need to move through security assessments.  We want to give you the answer you need to do your job and move on, rather than have you waste time searching for the information. Q gives you some solid tools to do compliance faster – and better.</p>
 		</div>
 		<div class="col-md-6">
-			<div style="width: 100%; height: 25vw; border: 1px solid black; padding: 2em;">
-				Image here
-			</div>
+      <div class="embed-responsive embed-responsive-16by9">
+        <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/F5QN28WGTbs"></iframe>
+      </div>
 		</div>
 	</div>
   </div>
