--- a/templates/base.html
+++ b/templates/base.html
@@ -64,7 +64,7 @@
             .glyphicon-book { color: #888; }
             .glyphicon-globe { color: #888; }
             .glyphicon-plus { color: #FFF; }
-            .btn { white-space: normal; }
+            .btn { white-space: normal; font-size: inherit; }
         </style>
         <link rel="stylesheet" href="{% static "vendor/bootstrap/css/bootstrap-theme.min.css" %}">
         <link rel="stylesheet" href="{% static "vendor/fontawesome/css/font-awesome.min.css" %}">
