--- a/templates/project.html
+++ b/templates/project.html
@@ -49,7 +49,6 @@
 }
 
 .task {
-  padding: 0 18px;
   width: 350px;
   margin: auto;
   margin-bottom: 8px;
@@ -57,9 +56,16 @@
   text-align: center;
   border:1px solid #ccc;
 }
-
   .task:hover {
     background-color: rgb(248,248,248);
+  }
+  .task .first_start {
+    margin: -8px -8px 8px -8px;
+    padding: 4px;
+    background-color: #EEE;
+    font-weight: bold;
+    color: #090;
+    font-size: 90%;
   }
   .task.task_finished {
     border-left: 4px solid rgb(30,143,55);
@@ -82,7 +88,7 @@
     font-size: 14px;
     line-height: 128%;
   }
-  
+
 .task.deleted span {
   color: #DDD;
   text-decoration: line-through;
@@ -223,6 +229,12 @@ span.glyphicon.glyphicon-check {
               {% for rec in group.modules %}
                 <div id="question-{{rec.question.key}}" class="task {% if rec.is_finished %}task_finished{% endif %}">
 
+                  {% if rec.first_start %}
+                  <div class="first_start">
+                    Your Next Task
+                  </div>
+                  {% endif %}
+
                   <div class="task-title">
                     {{rec.question.spec.title}}
                   </div>
@@ -254,11 +266,7 @@ span.glyphicon.glyphicon-check {
                           <input type="hidden" name="question" value="{{rec.question.key}}"/>
                           <input type="hidden" name="previous" value="project"/>
                           <a href="#" onclick="$(this).parent('form').submit(); return false;">
-                            {% if rec.tasks|length == 0 %}
-                              <span class="glyphicon glyphicon-unchecked"></span> Start
-                            {% else %}
-                              <span class="glyphicon glyphicon-unchecked"></span> Start
-                            {% endif %}
+                            <span class="glyphicon glyphicon-unchecked"></span> Start
                           </a>
                         </form>
                         <a href="#" class="assign-task" onclick="return invite_user_to_start_module('{{rec.module.title|escapejs}}', {{rec.question.id}});"><span class="glyphicon glyphicon-share"></span> Assign</a>
