css fixes, fix footer copyright year, remove typo'd duplicated text in title

--- a/templates/base-landing.html
+++ b/templates/base-landing.html
@@ -64,7 +64,7 @@
       <hr>
       <footer>
         <div class="container">
-          <p>&copy; GovReady 2016</p>
+          <p>&copy; GovReady {% now "Y" %}</p>
         </div>
       </footer>
     </div> <!-- /container -->
