--- a/templates/project.html
+++ b/templates/project.html
@@ -15,7 +15,6 @@
 
 
 .tab-pane {
-  padding-top: 1.5em;
 }
 
 .nav-tabs {
@@ -23,7 +22,7 @@
 }
 /* TODO: Move into side-wide stylesheet. The !important is here
    because something on hover is canceling out the border. */
-.nav-tabs>li.active>a, .nav-tabs>li.active>a:focus {
+.nav-tabs>li.active>a, .nav-tabs>li.active>a:focus, .nav-tabs>li.active>a:hover  {
   font-weight: normal;
   color: black;
   border: none;
