in a multiple-choice question, if min == max adjust the text ('You must choose at least 5 and at most 5 options' => 'You must choose exactly 5 options.')

--- a/templates/question.html
+++ b/templates/question.html
@@ -213,7 +213,9 @@ h2 { display: none; }
               </div>
               {% endfor %}
 
-              {% if q.spec.min > 0 %}
+              {% if q.spec.min > 0 and q.spec.min == q.spec.max %}
+                  <p class="help-block">You must choose exactly {{q.spec.min}} options.</p>
+              {% elif q.spec.min > 0 %}
                   <p class="help-block">You must choose at least {{q.spec.min}} {% if q.spec.max %}and at most {{q.spec.max}}{% endif %} options.</p>
               {% elif q.spec.max %}
                   <p class="help-block">You may choose at most {{q.spec.max}} options.</p>
