--- a/templates/project.html
+++ b/templates/project.html
@@ -39,7 +39,7 @@
 }
 
 .task-group {
-  margin: 1.5em 0;
+  margin: 50px 0 0 0;
 }
 
 .task-group-title {
@@ -77,7 +77,8 @@
     display: inline-block;
     padding: 0 0.25em;
     color: #666;
-    font-size: 0.75em;
+    font-size: 10.5pt;
+    margin: 8px 0px 4px 0px;
   }
   .task-commands a:hover {
     color: rgb(55,123,181);
@@ -104,7 +105,6 @@
   .task.deleted .delete-task:after {
     content: "(undo)";
   }
-
 
 span.glyphicon.glyphicon-check {
   color: rgb(30,143,55);
@@ -220,6 +220,7 @@ span.glyphicon.glyphicon-check {
       {% for tab in tabs %}
         <div role="tabpanel" class="tab-pane {% if forloop.first %}active{% endif %}" id="{{tab.title|slugify}}">
             {{tab.intro.html|safe}}
+
 
             {% for group in tab.groups.values %}
             <div class="task-group">
