--- a/templates/question.html
+++ b/templates/question.html
@@ -17,6 +17,10 @@ h1 {
   font-weight: bold;
 }
 
+.form-control {
+  font-size: 14pt;
+}
+
 #question {
   font-size: 14pt;
 }
@@ -45,7 +49,7 @@ label:hover .onhover { display: inline; }
 
 #discussion {
   margin-top: 1em;
-  border-top: 1px solid #DDD;
+  /*border-top: 1px solid #DDD;*/
   padding-top: 1em;
 }
 h2 { display: none; }
@@ -337,6 +341,8 @@ h2 { display: none; }
             {% if q.spec.encrypt == "emphemeral-user-key" %}
               <p class="help-block">Your answer will be encrypted and will only be available to you when accessed from this web browser within the next {{ephemeral_encryption_lifetime}}.</p>
             {% endif %}
+
+            <hr style="margin: 60px 0px 40px 0px;"/>
 
             {% if write_priv %}
             <button id="save-button"
