updated top page text from nic

--- a/templates/index.html
+++ b/templates/index.html
@@ -13,7 +13,7 @@ Home
 <div class="jumbotron">
   <div class="container">
     <h1>Welcome to GovReady Q</h1>
-    <p>We&rsquo;ll help you answer questions and produce a document.</p>
+    <p>We&rsquo;ll help you do compliance faster, better, and easier.</p>
 
     {% if not has_projects %}
     <p><a class="btn btn-primary btn-lg" role="button" href="/new-project">Start a New Project/System &raquo;</a></p>
@@ -21,18 +21,12 @@ Home
     <p><a class="btn btn-primary btn-lg" role="button" href="/projects">View Your Projects/Systems &raquo;</a></p>
     {% endif %}
 
-    <hr>
+  <div class="row" style="margin-top: 2em">
+    <div class="col-md-6">
+			<p>Click View Your Projects/Systems to access your existing projects and create new ones. Once you get into a project you’ll be directed to your next task. You should generally work through these tasks in order, though it is OK to skip questions you don’t yet know the answer to &mdash; Q makes it easy to track In Progress tasks and permits you to update with new information as your workflow allows. </p>
 
-    <h2>GovReady&rsquo;s Learning Philosophy</h2>
-
-    <div class="row">
-	    <div class="col-md-6">
-			<p>GovReady respects your time, expertise and curiosity. And we also respect that sometimes you’re just trying to get your job done better, faster. When it comes to the workplace, the right tool is everything.</p>
-
-			<p>Q is GovReady’s Compliance &amp; Security Performance Support platform. There’s no voice over for you to sit through, and nothing cute or extraneous. This is a 21st century toolbox, so it’s mobile-friendly and infographic-heavy, and you can jump in and out of the content as your job requires. Our stripped-down approach delivers practical guidance in the immediate moment of need as well as access to deeper technical knowledge for learners who have time to be a bit more curious. We’ve also created some functional checklists that you can use to track your progress and manage some of your administrative inputs.</p>
-
-			<p>It’s a challenge to make a highly technical subject like compliance easy, and that’s what we’re going for. We’re working to operationalize the information you need to move through security assessments.  We want to give you the answer you need to do your job and move on, rather than have you waste time searching for the information. Q gives you some solid tools to do compliance faster – and better.</p>
-		</div>
+      <p>And keep in mind that as you enter information, you’re creating the actual compliance output documents. You can click the Preview button at any time to see how the information you’re entering is populating the documents.</p>
+    </div>
 		<div class="col-md-6">
       <div class="embed-responsive embed-responsive-16by9">
         <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/F5QN28WGTbs"></iframe>
