--- a/templates/index.html
+++ b/templates/index.html
@@ -13,7 +13,7 @@ Home
 <div class="jumbotron">
   <div class="container">
     <h1>Welcome to GovReady Q</h1>
-    <p>We&rsquo;ll help you do compliance faster, better, and easier.</p>
+    <p>We&rsquo;ll help you do compliance faster, better and easier.</p>
 
     {% if not has_projects %}
     <p><a class="btn btn-primary btn-lg" role="button" href="/new-project">Start a New Project/System &raquo;</a></p>
