add beta label to header

--- a/templates/base.html
+++ b/templates/base.html
@@ -90,6 +90,7 @@
             <span class="icon-bar"></span>
           </button>
           <a class="navbar-brand" href="/"><img alt="GovReady Q logo" src="{% static "img/brand/navbar-logo.png" %}"></a>
+          <span style="position: relative; top: 6px; left: 2px; color: #5B8; font-size: 12px; font-weight: bold;">BETA</span>
         </div>
 
         <div id="navbar-collapse-target" class="collapse navbar-collapse pull-right">
