less cartoon-y logo

--- a/templates/base.html
+++ b/templates/base.html
@@ -45,8 +45,8 @@
             body, blockquote {
                 font-size: 16px;
             }
-            .navbar-brand { padding: 1px; }
-            .navbar-brand img { width: 201px; }
+            .navbar-brand { padding-top: 7px; }
+            .navbar-brand img { height: 30px; }
             .navbar .notification.unread a span {
                 font-weight: bold;
             }
@@ -89,8 +89,10 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="/"><img alt="GovReady Q logo" src="{% static "img/brand/navbar-logo.png" %}"></a>
-          <span style="position: relative; top: 6px; left: 2px; color: #5B8; font-size: 12px; font-weight: bold;">BETA</span>
+          <a class="navbar-brand" href="/">
+            <img alt="GovReady Q logo" src="{% static "img/brand/navbar-logo.png" %}">
+          </a>
+          <span style="position: relative; top: 6px; left: -6px; color: #7ee599; font-size: 12px; font-weight: bold;">BETA</span>
         </div>
 
         <div id="navbar-collapse-target" class="collapse navbar-collapse pull-right">
