beta did not render properly in safari

--- a/templates/base.html
+++ b/templates/base.html
@@ -46,7 +46,7 @@
                 font-size: 16px;
             }
             .navbar-brand { padding-top: 7px; }
-            .navbar-brand img { height: 30px; }
+            .navbar-brand img { width: 153px; display: inline-block; }
             .navbar .notification.unread a span {
                 font-weight: bold;
             }
@@ -91,8 +91,8 @@
           </button>
           <a class="navbar-brand" href="/">
             <img alt="GovReady Q logo" src="{% static "img/brand/navbar-logo.png" %}">
+            <span style="position: relative; top: -4px; color: #7ee599; font-size: 12px; font-weight: bold;">BETA</span>
           </a>
-          <span style="position: relative; top: 6px; left: -6px; color: #7ee599; font-size: 12px; font-weight: bold;">BETA</span>
         </div>
 
         <div id="navbar-collapse-target" class="collapse navbar-collapse pull-right">
