make our use of colors more consistent
* green #449d44 (bootstrap "success") - buttons that take you forward and elements (like active tabs) that visually lead the user to that next button

* purple #96B - indicates completed actions (finished tasks, answered questions)

* blue (bootstrap "primary") - labels that mark actions in progress (started but not finished tasks)

* red (bootstrap "danger") - buttons for dangerous destructive actions like deleting a project

* flat white - the color of the Skip/Clear button

--- a/templates/index.html
+++ b/templates/index.html
@@ -16,9 +16,9 @@ Home
     <p>We&rsquo;ll help you do compliance faster, better and easier.</p>
 
     {% if not has_projects %}
-    <p><a class="btn btn-primary btn-lg" role="button" href="/new-project">Start a New Project/System &raquo;</a></p>
+    <p><a class="btn btn-success btn-lg" role="button" href="/new-project">Start a New Project/System &raquo;</a></p>
     {% else %}
-    <p><a class="btn btn-primary btn-lg" role="button" href="/projects">View Your Projects/Systems &raquo;</a></p>
+    <p><a class="btn btn-success btn-lg" role="button" href="/projects">View Your Projects/Systems &raquo;</a></p>
     {% endif %}
 
   <div class="row" style="margin-top: 2em">
