--- a/templates/new-project.html
+++ b/templates/new-project.html
@@ -27,7 +27,7 @@ Add System
     {% csrf_token %}
     {% bootstrap_form form %}
     {% buttons %}
-      <button type="submit" class="btn btn-primary">Create Project/System &raquo;</button>
+      <button type="submit" class="btn btn-success">Create Project/System &raquo;</button>
     {% endbuttons %}
 </form>
 
