--- a/templates/task-breadcrumbs.html
+++ b/templates/task-breadcrumbs.html
@@ -1,6 +1,6 @@
 <li>
 	<a href="{{task.project.get_absolute_url}}">
-	  <span class="glyphicon glyphicon-hdd" style="color:rgb(40,125,60); margin-right: .25em"></span>
+	  <span class="glyphicon glyphicon-hdd" style="color: #449d44; margin-right: .25em"></span>
 	  {{task.project.title}}
 	</a>
 </li>
