--- a/templates/task-header.html
+++ b/templates/task-header.html
@@ -23,7 +23,7 @@
   #question-history-context ul li.other {
   }
 .glyphicon.glyphicon-check {
-  color: rgb(30,143,55);
+  color: #96B;
 }
 
 #page-transition-paragraph p {
