--- a/templates/task-progress-question-list.html
+++ b/templates/task-progress-question-list.html
@@ -1,5 +1,5 @@
 {% for q in context %}
-  <li class="{% if q.is_this_question %}this{% else %}other{% endif %}">
+  <li id="link-to-question-{{q.key}}" class="{% if q.is_this_question %}this{% else %}other{% endif %}">
     {% if not q.is_this_question and q.can_link %}<a href="?q={{q.key}}&previous={{previous|urlencode}}">{% endif %}
 
     {% if q.is_this_question  %}<span class="glyphicon glyphicon-play-circle"> </span>
